@@ -1,67 +1,0 @@
-#! /usr/bin/perl
-# little script to extract the text from the tips file
-# and output it, so xgettext can add the tips to the po file
-#
-# 2000 by Matthias Kiefer <matthias.kiefer@gmx.de>
-
-# IMPORTANT NOTE: Do not change the output without checking if
-# translations still work!
-
-sub printText
-{
-	my $text = $_[0];
-	
-	if ( $text cmp "" )
-	{
-
-	# replace \ with \\
-	$text =~ s/\\/\\\\/g;
-
-	# replace " with \"
-	$text =~ s/"/\\"/g;
-			
-	print "\"$text\\n\"\n";
-	}
-}
-
-die "usage: $0 [tips file]" unless defined $ARGV[0];
-open(FILE,"<",$ARGV[0]) or die "unable to open tips file";
-if ( $^V ge v5.8.0 )
-{
-	binmode(FILE,":utf8");
-	binmode(STDOUT,":utf8");
-}
-
-$inTip=0;
-
-while(<FILE>)
-{
-	chomp;
-
-	# tip starts with <html>
-	if(/^\s*<html>(.*)/io)
-	{
-		$inTip=1;
-		print "// i18n: file: $ARGV[0]:$.\n// i18n: ectx: \@info:tipoftheday\n";
-		print "i18n(";
-		printText($1);
-		next;
-	}	
-
-	if($inTip!=0)
-	{
-		# tip ends with </html>
-		if(/^(.*)\s*<\/html>/io)
-		{
-			printText($1);
-			print ");\n\n";
-			$inTip=0;
-		}
-		else
-		{
-			printText($_);
-		}
-	}   
-}
-
-close(FILE);
