@@ -187,7 +187,6 @@ private:
   QRadioButton* m_rbImageInLocalDir;
   QCheckBox* m_cbOpenLastFile;
   QCheckBox* m_cbQuickFilterRegExp;
-  QCheckBox* m_cbShowTipDay;
   QCheckBox* m_cbEnableWebcam;
   QCheckBox* m_cbCapitalize;
   QCheckBox* m_cbFormat;
