@@ -1,6 +1,6 @@
 <?xml version = '1.0'?>
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui version="43" name="tellico">
+<kpartgui version="44" name="tellico">
  <MenuBar>
   <Menu name="file">
    <text>&amp;File</text>
@@ -119,9 +119,6 @@
    <Action append="show_merge" name="change_entry_grouping"/>
    <Action append="show_merge" name="lock_layout"/>
    <Action append="show_merge" name="reset_layout"/>
-  </Menu>
-  <Menu name="help">
-   <Action name="tipOfDay"/>
   </Menu>
  </MenuBar>
  <ToolBar noMerge="1" name="mainToolBar">
