@@ -1,107 +1,0 @@
-<tip category="Tellico">
-<html>
-<p>...that if a book has more than one author, you should separate
-their names by a semi-colon, so that Tellico will know how to split them
-and use them separately.</p>
-<p>Any other field which allows multiple values should be entered the
-same way, with a semi-colon (;) separating each value.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can change which fields are shown in the column view by
-right-clicking on the column header.
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can add, edit, or modify the fields in the collection using
-the Field Editor. The arrow buttons below the field list can be used to change the
-position of the field in the list, which affects the placement in the entry
-editor.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that if you want to filter by a Checkbox field, a value of
-"true" should be used. If you'd like to filter to
-show only the science fiction books which you've not read, for
-example, check the <em>Match all of the
-following</em> button, set the first rule to have "Genre"
-"contains" "Science Fiction" (no quotes) and the second rule to
-have "Read" "does not contain" "true" (no quotes).</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that if a non-word character is used in the Quick Filter, the text is
-interpreted as a regular expression.</p>
-<p>To show only books which are by Weber or Bujold, for example, then
-type "weber|bujold" (no quotes) in the filter box.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can edit more than one entry at a time, by holding down
-the Shift or Ctrl key and selecting multiple entries.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can convert an existing book collection to a bibliography,
-which can then be exported to bibtex or Bibtexml format.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can add, edit, and delete string macros for bibliographies.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that if more than one field is formatted as a name, then an additional
-group named "People" is added to the collection, allowing authors and editors
-to be sorted or printed together, for example.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can modify the appearance of the printed output by modifying
-the <tt>tellico-printing.xsl</tt> file. The file generates HTML, and the CSS
-within the stylesheet governs things like the font, the margins, etc.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can import using any generic XSL stylesheet which
-outputs a valid Tellico XML file.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that double-clicking an entry item opens the Entry Editor.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can add HTML tags to any Paragraph field for formatting, such as
-&lt;b&gt;bold&lt;/b&gt; or &lt;i&gt;italic&lt;/i&gt;.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that when the Column View is focused, you can press a letter on the
-keyboard to scroll to the next entry that starts with that letter.</p>
-</html>
-</tip>
-<tip category="Tellico">
-<html>
-<p>...that you can use a field with a derived value to combine multiple separated fields
-into a single field. Use a derived value template
-similar to "Value: %{fielda}%{fieldb}" where %{...} gets replaced with the
-appropriate field value. This is useful to collect multiple values in a
-single field, e.g. for better grouping, and to combine fields of different
-types by respecting proper sorting at the same time. Consider for example
-a number field followed by a text subfield with entries 3b, 14a.</p>
-</html>
-</tip>
