@@ -1,3 +1,7 @@
+2023-08-02  Robby Stephenson  <robby@periapsis.org>
+
+	* Removed "Tip of the Day" dialog.
+
 2023-07-16  Robby Stephenson  <robby@periapsis.org>
 
 	* Removed author searches from Google Scholar.
